--- a/itemInfo.css
+++ b/itemInfo.css
@@ -7,7 +7,7 @@
 }
 
 #image {
-    width: 60%;
+    width: 50%;
     border-radius: 4px;
 }
 
@@ -16,3 +16,10 @@
     margin-top: 20px;
 }
 
+#quantity {
+    width: 30px;
+}    
+
+#putHoldButton {
+    float: right;
+}
